# honeymoon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  audit_logger.py  pyproject.toml  requirements.txt  run-tasks-01.sh  run-tasks.sh
.claude/: settings.json
.context/: architecture.json  constraints.json  project.json  session.json  stack.json
.glitchlab/: ROADMAP.md  config.yaml  task_state.json
dashboard/: package.json  pnpm-lock.yaml
docs/: cli_usage.md
glitchlab/: AGENT_GUIDE.md  __init__.py  agent_runners.py  audit_logger.py  brain_writer.py  cli.py  config.yaml  config_loader.py  context_compressor.py  controller.py  controller_utils.py  decomposer.py  display.py  doc_inserter.py  event_bus.py  events.py  history.py  identity.py  indexer.py  lifecycle.py  parallel.py  pheromone.py  prelude.py  registry.py  router.py  run_context.py  runners.py  scope.py  sentry.py  state.py  step_handlers.py  swarm.py  symbols.py  task.py  task_quality.py  task_state.py
honeymoon/: AGENT_GUIDE.md  __init__.py  agent_runners.py  audit_logger.py  brain_writer.py  cli.py  config.yaml  config_loader.py  context_compressor.py  controller.py  controller_utils.py  daemon.py  decomposer.py  display.py  doc_inserter.py  event_bus.py  events.py  history.py  hive_context.py  identity.py  indexer.py  ledger.py  lifecycle.py  mcp_server.py  mission.py  parallel.py  pheromone.py  prelude.py  registry.py  report.py  router.py  run_context.py  scope.py  sentry.py  signing.py  step_handlers.py  swarm.py  symbols.py  task.py  task_state.py  (+1 more)
tasks_for_claude_code/: CCGL_TASK_12C.md  CCGL_TASK_12D.md  CCGL_TASK_12E.md  CCGL_TASK_13A.md  CCGL_TASK_13B.md  CCGL_TASK_13C.md  CCGL_TASK_14.md  CCGL_TASK_15.md  CCGL_TASK_16.md  CCGL_TASK_17.md
tests/: test_agent_parsing.py  test_agent_result.py  test_agent_token_tracking.py  test_apply_changes.py  test_boundary_enforcer.py  test_cli_compare.py  test_cli_doctor.py  test_cli_public_docstrings.py  test_controller_utils_public_helpers.py  test_decomposer.py  test_dependencies.py  test_event_bus.py  test_history.py  (+21 more)
(+126 files in other folders)
