[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glitchlab"
version = "4.3.0"
description = "GLITCHLAB — The Agentic Dev Engine. Build Weird. Ship Clean."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Adjective LLC"}
]

dependencies = [
    "litellm>=1.82.0",
    "pydantic>=2.12.5",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.3",
    "gitpython>=3.1.46",
    "httpx>=0.28.1",
    "tenacity>=8.2.0",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.3.0",
]

ast = [
    "tree-sitter-languages>=1.10.2",
]

[project.scripts]
glitchlab = "glitchlab.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["glitchlab*"]

[tool.ruff]
target-version = "py311"
line-length = 100

# Prevent Pytest from scanning the whole repo for "test_*.py" files
[tool.pytest.ini_options]
testpaths = ["tests"]